libgig (4.0.0-1+svn1) unreleased; urgency=low

  * Minor changes.

 -- Christian Schoenebeck <cuse@users.sourceforge.net>  Wed, 06 Apr 2016 13:31:35 +0200

libgig (4.0.0-1) unstable; urgency=low

  * New release.
  * libgig shared library (libgig.so) is now at version 7.0.0.
  * Script for building from SVN is now Makefile.svn (Makefile.cvs still
    exists but is deprecated).
  * Updated to Debian compatibility level 7.

 -- Christian Schoenebeck <cuse@users.sourceforge.net>  Tue, 14 Jul 2015 11:32:40 +0200

libgig (3.3.0-6) unstable; urgency=low

  * Add postinst and postrm trigger scripts for adding and removing
    libgig's new .so libdir (/usr/lib/libgig/) to /etc/ld.so.conf.

 -- Christian Schoenebeck <cuse@users.sourceforge.net>  Sun, 01 Jun 2014 19:33:24 +0200

libgig (3.3.0-5) unstable; urgency=low

  * libgig.so and libakai.so files are now under /usr/lib/libgig
  * Header files are now under /usr/include/libgig
  * Fixed missing installation of akai.pc

 -- Christian Schoenebeck <cuse@users.sourceforge.net>  Sun, 01 Jun 2014 00:39:04 +0200

libgig (3.3.0-4) unstable; urgency=low

  * Added Linux/POSIX ported version of libakai. Note that libakai is released
    under LGPL terms while libgig is released under GPL terms. To handle this
    license difference appropriately the AKAI support part is built as separate
    DLL (.so file). Due to its low expected demand however, no separate package
    is created for the AKAI part for now though.
  * Updated package descriptions.

 -- Christian Schoenebeck <cuse@users.sourceforge.net>  Thu, 22 May 2014 00:58:12 +0200

libgig (3.3.0-3) unstable; urgency=low

  * Updated package descriptions.

 -- Christian Schoenebeck <cuse@users.sourceforge.net>  Thu, 02 Jan 2014 00:28:00 +0100

libgig (3.3.0-2) unstable; urgency=low

  * Included new command line tools "gigmerge" and "gig2mono".

 -- Christian Schoenebeck <cuse@users.sourceforge.net>  Tue, 31 Dec 2013 02:11:22 +0100

libgig (3.3.0-1) unstable; urgency=low
